# utils/auth.go
@@ -6,24 +6,32 @@ import (
 	"github.com/go-chi/jwtauth"
 	"github.com/google/uuid"
 	"github.com/lestrrat-go/jwx/jwt"
+	"lightRoom/cache"
 	"net/http"
-	"os"
+	"strings"
 	"time"
 )
 
 var TokenAuth *jwtauth.JWTAuth
-var JwtSecret string = os.Getenv("JWT_SECRET")
+
+func AuthInit() {
+	var JwtSecret string = Settings.JwtSecret
+
+	TokenAuth = jwtauth.New("HS256", []byte(JwtSecret), nil)
+}
 
 func GenerateAccessToken(userId uuid.UUID) string {
-	TokenAuth = jwtauth.New("HS256", []byte(JwtSecret), nil)
+	var JwtSecret string = Settings.JwtSecret
 
+	TokenAuth = jwtauth.New("HS256", []byte(JwtSecret), nil)
 	_, tokenString, _ := TokenAuth.Encode(map[string]interface{}{"user_id": userId,
 		"exp": time.Now().Add(time.Hour * 24).Unix()})
-
 	return tokenString
 }
 
 func GenerateRefreshToken(userId uuid.UUID) string {
+	var JwtSecret string = Settings.JwtSecret
+
 	TokenAuth = jwtauth.New("HS256", []byte(JwtSecret), nil)
 
 	_, tokenString, _ := TokenAuth.Encode(map[string]interface{}{"user_id": userId,
@@ -43,11 +51,13 @@ func VerifyRefreshToken(refreshToken string) (string, error) {
 	if err = jwt.Validate(token); err != nil {
 		return "", errors.New("invalid or expired refresh token")
 	}
-
 	userID, _ := token.Get("user_id")
+	userIDStr, ok := userID.(string)
 
-	parsedUUID := userID.(uuid.UUID)
-
+	if !ok {
+		return "", errors.New("user_id is not a valid string")
+	}
+	parsedUUID, _ := uuid.Parse(userIDStr)
 	return GenerateAccessToken(parsedUUID), nil
 }
 
@@ -56,19 +66,9 @@ func VerifyRefreshToken(refreshToken string) (string, error) {
 // response for any unverified tokens and passes the good ones through.
 func LightRoomTicator(next http.Handler) http.Handler {
 	return http.HandlerFunc(func(writer http.ResponseWriter, request *http.Request) {
-		//authHeader := request.Header.Get("Authorization")
 
-		// Extract the token from the Authorization header (assuming "Bearer <token>")
-		//tokenStr := authHeader[len("Bearer "):]
-		//_, err := cache.GetToken(tokenStr)
-		//if err == nil {
-		//	writer.Header().Set("WWW-Authenticate", "Bearer")
-		//	writer.Header().Set("Content-Type", "application/json")
-		//	writer.WriteHeader(http.StatusUnauthorized)
-		//	writer.Write([]byte(`{"detail":"Invalidated token provided"}`))
-		//	return
-		//}
 		token, claims, err := jwtauth.FromContext(request.Context())
+
 		if err != nil {
 			writer.Header().Set("WWW-Authenticate", "Bearer")
 			writer.Header().Set("Content-Type", "application/json")
@@ -87,10 +87,26 @@ func LightRoomTicator(next http.Handler) http.Handler {
 
 		}
 
+		authHeader := request.Header.Get("Authorization")
+
+		if strings.HasPrefix(authHeader, "Bearer ") {
+			authRawToken := strings.TrimPrefix(authHeader, "Bearer ")
+			cachedToken, _ := cache.GetToken(authRawToken)
+
+			if cachedToken != "" {
+				writer.Header().Set("WWW-Authenticate", "Bearer")
+				writer.Header().Set("Content-Type", "application/json")
+				writer.WriteHeader(http.StatusUnauthorized)
+				writer.Write([]byte(`{"detail":"token blacklisted"}`))
+				return
+
+			}
+
+		}
+
 		userID, _ := claims["user_id"]
 		contxt := context.WithValue(request.Context(), "user_id", userID)
-		request.WithContext(contxt)
-
+		request = request.WithContext(contxt)
 		// Token is authenticated, pass it through
 		next.ServeHTTP(writer, request)
 	})
